@@ -131,6 +131,10 @@ static int option_merge_AbsoluteCounters = FALSE;
 int get_option_merge_AbsoluteCounters (void) { return option_merge_AbsoluteCounters; }
 void set_option_merge_AbsoluteCounters (int b) { option_merge_AbsoluteCounters = b; }
 
+static long option_merge_StopAtPercentage = 0;
+long get_option_merge_StopAtPercentage(void) { return option_merge_StopAtPercentage; }
+void set_option_merge_StopAtPercentage(long b) { option_merge_StopAtPercentage = b; }
+
 static int option_merge_TraceOverwrite = TRUE;
 int get_option_merge_TraceOverwrite (void) { return option_merge_TraceOverwrite; }
 void set_option_merge_TraceOverwrite (int b) { option_merge_TraceOverwrite = b; }
